# tm1640-rpi

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  SConstruct  build.sh  setup.py  update.sh
doc/: Makefile  furyfire-licensing.txt  make.cmd  requirements.txt
doc/source/: Doxyfile  building.rst  c.rst  conf.py  fonts.rst  index.rst  intro.rst  python.rst  sh.rst  wiring.rst
src/: font.h  main.c
src/libtm1640/: font.h  tm1640.c  tm1640.h
src/python/: tm1640.py
